--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <zookeeper-version>3.6.2</zookeeper-version>
         <dubbo-version>3.1.0</dubbo-version>
         <mybatis-plus-version>3.4.3.1</mybatis-plus-version>
+        <kafka-version>3.1.0</kafka-version>
     </properties>
 
     <dependencyManagement>
@@ -64,6 +65,12 @@
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
                 <version>${jedis.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka_2.13</artifactId>
+                <version>${kafka-version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
