--- a/.editorconfig
+++ b/.editorconfig
@@ -14,9 +14,9 @@ indent_style = tab
 charset = utf-8
 
 [*.java]
-ij_java_align_consecutive_assignments = false
+ij_java_align_consecutive_assignments = true
 ij_java_align_consecutive_variable_declarations = false
-ij_java_align_group_field_declarations = false
+ij_java_align_group_field_declarations = true
 ij_java_align_multiline_annotation_parameters = false
 ij_java_align_multiline_array_initializer_expression = false
 ij_java_align_multiline_assignment = false
